2011-09-06 Javier Lanz <javier.lanz@artica.es>

	* include/help/en/help_timesource.php: Changed a wee translation bug
	and fixed style format
	* godmode/setup/setup.php: Fixed a field name, written properly.

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/styles/pandora.css,
	images/skin/skin_default/include/styles/pandora.css: added items to set the
	style of calendar tooltip.
	
	* include/calendar.js, include/javascript/calendar.js: erased the styles
	for the calendar.
	
	Fixes: #3371449

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php: hidden the legend of datas with 0 value.
	
	Fixes: #3379756

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/events/events_rss.php, operation/events/export_csv.php: fixed
	the output html entities and html entities of html entities.
	
	Fixes: #3389980

2011-09-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Avoiding wrong integria inventory object data.

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/alerts_status.php: change the user rights to validate
	alert, before it was "LW" and now it is "AW". This new user rights tell me
	Sancho.

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* general/logon_ok.php: change the text to be a correct sentence.
	
	Fixex: #3394390

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/help/en/help_action_threshold.php,
	include/help/es/help_action_threshold.php: added help for threshold from
	the wiki documentation.
	
	Fixes: #3371385

2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Added contextual help in this view.

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php: fixed when havent any data in any
	group.
	
	Fixes: #3371412

2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/system_info.php: show the location of file.
	